[incubator-kie-issues#1206_reimplement_visitor_new_node_approach] WIP - All node implemented. Broken